- fixed aquifer getfeatureinfo - added BGS to interpolation - graph shows BGS or MSL on y-axis - graph is fully visible - lizard_connector to flake8

--- a/freq/static/freq/css/freq.css
+++ b/freq/static/freq/css/freq.css
@@ -108,7 +108,7 @@ html, body {
 }
 .graph-height {
     height: 250px;
-    margin-left: -15px;
+    margin-left: -5px;
 }
 .form-control .input-number {
     min-width: 50px;
